Tue Jan 30 11:27:14 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ciao/Server_init.{h,cpp}:
          Change argument of BindObjectPath to a _ptr. Fixes bugzilla
          2779. Thanks to Abdullah Sowayan <abdullah.sowayan@lmco.com>
          for reporting this.

Mon Jan 29 19:23:14 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ciao/Swapping_Servant_Home_Impl_Base.{h,cpp}:
        * ciao/Upgradeable_Context_Impl_T.cpp:
        * DAnCE/DomainApplicationManager/DomainApplicationManager_Impl.cpp
          Layout changes

        * DAnCE/DomainApplicationManager/Deployment_Configuration.cpp:
          Fixed parsing of node manager file

        * examples/BasicSP/descriptors/run_test.pl:
          New script to run this example automatically

        * exampls/BasicSP/README.html:
          Fixed incorrect path and mpc generation command

Sun Jan 28 19:59:14 2007  William R. Otte  <wotte@dre.vanderbilt.edu>

        * CIAO version 0.5.6 released.

Thu Jan 25 18:18:58 UTC 2007  Chad Elliott  <elliott_c@ociweb.com>

        * *.{h,cpp,inl}:

          Removed the majority of the ACE exception macros.  The
          ACE_THROW_RETURN's were left in to avoid warnings from aCC.

Wed Jan 24 13:00:12 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * *.{h,cpp,inl}:
          Removed part of the environment macros

Mon Jan 22 23:14:56 2007  William R. Otte  <wotte@dre.vanderbilt.edu>

        * CIAO version 0.5.5 released.


Local Variables:
mode: change-log
add-log-time-format: (lambda () (progn (setq tz (getenv "TZ")) (set-time-zone-rule "UTC") (setq time (format-time-string "%a %b %e %H:%M:%S %Z %Y" (current-time))) (set-time-zone-rule tz) time))
indent-tabs-mode: nil
End: